# zapret-ui

./: .gitignore  README.md  package-lock.json  package.json  start.bat  version.txt  vite.config.js
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  releaser.yml  security.yml
binaries/lists/: list-general-user.txt
binaries/utils/: test zapret.ps1
binaries/utils/test results/: test_results_2026-02-27_19-51-19.txt  test_results_2026-04-15_20-39-45.txt  test_results_2026-04-15_20-53-35.txt
scripts/: check-versions.mjs  set-version.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  zapret-ui-manifest.rc  zapret-ui.manifest
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: index.js  restart-banner.html
src/components/modals/: close-confirm.html  first-launch.html  info-help.html  latest-version.html  restart.html  status.html  strategies-firstrun.html  update.html  wizard.html
src/components/sections/: diagnostics.html  home.html  ips.html  sites.html
src/features/: admin-check.js  binaries.js  connect.js  diagnostics.js  filters.js  firstrun.js  info-modals.js  navigation.js  status-check.js  status.js  strategies.js  titlebar.js  updates.js  user-lists.js  versions.js  wizard.js
src/i18n/: en.js  ru.js
src/lib/: core.js  dom.js  i18n.js  restart.js  state.js
